# esdb

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
benches/esdb-benches/: Cargo.toml
crates/esdb/: Cargo.toml
crates/esdb/src/: data.rs  lib.rs  model.rs  persistence.rs  stream.rs  tags.rs
crates/esdb/src/persistence/: data.rs  index.rs  reference.rs
crates/esdb/src/stream/: data.rs  events.rs  indices.rs  state.rs
crates/esdb/src/stream/indices/: typed.rs  types.rs
crates/esdb/src/stream/indices/typed/: ordinal.rs
crates/esdb/src/stream/indices/types/: forward.rs  ordinal.rs
examples/esdb-examples/: Cargo.toml
examples/esdb-examples/examples/: bitvec.rs  codec.rs  esdb_experiments.rs  fjall.rs  fjall_capacity.rs  fjall_experiments.rs  fjall_sequence.rs  fjall_simple.rs  general_experiments.rs  hash_experiments.rs  hashset.rs  rocksdb_sequence.rs  rocksdb_simple.rs  rocksdb_transactions.rs
examples/esdb-examples/src/: lib.rs
