[dependencies]

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "esdb benches and performance baselines"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "esdb-benches"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
