[dependencies]

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "esdb"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "esdb"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
