[dependencies]
bytes.workspace       = true
derive_more.workspace = true
fjall.workspace       = true
multimap.workspace    = true
rapidhash.workspace   = true
serial_test.workspace = true

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "esdb"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "esdb"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
