[dependencies]
bytes.workspace             = true
derive_more.workspace       = true
fancy_constructor.workspace = true
fjall.workspace             = true
rapidhash.workspace         = true

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "esdb"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "esdb"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
