[dependencies]
bytes.workspace     = true
esdb.workspace      = true
fjall.workspace     = true
rapidhash.workspace = true

[lints]
workspace = true

[package]
authors.workspace    = true
categories.workspace = true
description          = "esdb examples"
edition.workspace    = true
keywords.workspace   = true
license.workspace    = true
name                 = "esdb-examples"
readme.workspace     = true
repository.workspace = true
version.workspace    = true
